--- a/src/components/posts/posts.scss
+++ b/src/components/posts/posts.scss
@@ -1,21 +1,17 @@
-@import '../../App.scss';
+@import "../../App.scss";
 
-.posts{
+.posts {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin: 10px 0 0 20px;
+  position: relative;
+
+  .search {
     display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin: 10px 0 0 10px;
-    position: relative;
 
-    @include desktop{
-        margin: 10px 0 0 0;
+    input {
+      border: none;
     }
-
-    .search{
-        display: flex;
-
-        input{
-            border: none;
-        }
-    }
+  }
 }
