--- a/src/components/comments/comments.scss
+++ b/src/components/comments/comments.scss
@@ -1,58 +1,57 @@
-@import '../../App.scss';
+@import "../../App.scss";
 
-.comments{
-        img{
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-            object-fit: cover;
-        }
+.comments {
+  img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
 
-        .write{
-            margin: 20px 0;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            gap: 20px;
+  .write {
+    margin: 20px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 20px;
 
-            input{
-                flex: 5;
-                padding: 10px;
-                background-color: transparent;
-                border-radius: 3px;
-            }
-            button{
-                border: none;
-                padding: 10px;
-                color: white;
-                background-color:#5271ff;
-                cursor: pointer;
-                border-radius: 3px;
-            }
-        }
-        .comment{
-            margin: 30px 0;
-            display: flex;
-            justify-content: space-between;
-            gap: 10px;
+    input {
+      flex: 5;
+      padding: 10px;
+      background-color: transparent;
+      border-radius: 3px;
+    }
+    button {
+      border: none;
+      padding: 10px;
+      color: white;
+      background-color: #5271ff;
+      cursor: pointer;
+      border-radius: 3px;
+    }
+  }
+  .comment {
+    margin: 30px 0;
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
 
-            .info{
-                flex: 5;
-                display: flex;
-                flex-direction: column;
-                align-items: flex-start;
-                gap: 5px;
+    .info {
+      flex: 5;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 5px;
 
-                span{
-                    font-weight: 500;
-                }
-            }
-
-            .date{
-                flex: 1;
-                align-self: center;
-                color: grey;
-                font-size: 12px;
-            }
-        }
+      span {
+        font-weight: 500;
+      }
+    }
+    .date {
+      flex: 1;
+      align-self: center;
+      color: grey;
+      font-size: 12px;
+    }
+  }
 }
