--- a/src/components/friends/friends.scss
+++ b/src/components/friends/friends.scss
@@ -1,23 +1,26 @@
-@import '../../App.scss';
+@import "../../App.scss";
 
-.friends{ 
-    width:70vw;
-    position: absolute;
-    top: 50px;
-    right: 0;
-    background-color: white;
-    border: 1px solid $background;
-    border-radius: 20px 20px 0 0;
-    height: calc(100vh - 50px);
-    overflow: scroll;
-    padding: 10px;
-    z-index: 1000;
+.friends {
+  width: 60vw;
+  position: absolute;
+  top: 50px;
+  right: -45px;
+  background-color: white;
+  border: 1px solid $background;
+  border-radius: 20px 20px 0 0;
+  height: calc(100vh - 50px);
+  overflow: scroll;
+  padding: 10px;
+  z-index: 1000;
 
-    &::-webkit-scrollbar{
-        display: none;
-    }
-    
-    .container{
-        padding: 10px 20px;
-    }
+  @include mobile{
+    width: 50vw;
+  }
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+  .container {
+    padding: 10px 20px;
+  }
 }
