--- a/src/components/latest/latest.scss
+++ b/src/components/latest/latest.scss
@@ -1,22 +1,20 @@
-@import '../../App.scss';
+@import "../../App.scss";
 
-.latest{
-    padding: 10px 0;   
+.latest {
+  padding: 10px 0;
 
-   .friendInfo {
-       text-decoration: none;
-       display: flex;
-       flex-wrap: wrap;
-       align-items: center;
-       gap: 5px;
+  .friendInfo {
+    text-decoration: none;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 5px;
 
-       img{
-           width: 40px;
-           height: 40px;
-           border-radius: 50%;
-           object-fit: cover;
-       }
-      
-       
-   }
+    img {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+  }
 }
