--- a/src/components/layout/header/header.scss
+++ b/src/components/layout/header/header.scss
@@ -1,116 +1,112 @@
-@import '../../../App.scss';
+@import "../../../App.scss";
 
-header{
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px;
+  position: sticky;
+  top: 0;
+  background-color: $tertiary;
+  z-index: 10;
+  border-radius: 0 0 20px 20px;
+  margin-bottom: 10px;
+
+  .left {
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    flex: 6;
     align-items: center;
-    padding: 15px;
-    position: sticky;
-    top: 0;
-    background-color: $tertiary;
-    z-index: 10;
-    border-radius: 0 0 20px 20px;
-    margin-bottom: 10px;
+    position: relative;
 
-    .left{
-        display: flex;
-        flex-wrap: wrap;
-        flex: 6;
-        align-items: center;
-        position: relative;
-        
-
-        @include mobile{
-            gap: 10px;
-        }
-        .logo{
-            color: $textColor;
-            font-weight: 900;
-            letter-spacing: .1rem;
-            text-transform: uppercase;
-        }
-        .menu-icon{
-           cursor: pointer;
-           display: flex;
-           font-size: 2rem;
-           align-items: center;
-           position: relative;
-           top: -1px;
-           left: 10px;
-
-           @include mobile{
-            left: 0;
-            
-           }
-            @include tablet{
-                display: none;
-            }
-        }
-        .sidebar-container{
-            display: flex;
-            gap: 10px;
-        }
-    
+    @include mobile {
+      gap: 10px;
     }
-    .center{
-        position: relative;
-
-        .person{
-            
-            margin-right: 10px;
-
-            .person-icon{
-                cursor: pointer;
-                font-size: 30px;
-
-                @include tablet{
-                    display: none;
-                }
-            }
-        }
+    .logo {
+      color: $textColor;
+      font-weight: 900;
+      letter-spacing: 0.1rem;
+      text-transform: uppercase;
     }
-    .right{
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        
-        .user{
-            position: relative;
-            
-            .profile-icon{ 
-                cursor: pointer;
-            }
-            .face-icon{
-                font-size: 26px;
-            }
-            ul{
-                width: 45vw;
-                position: absolute;
-                right: 5px;
-                top: 35px;
-                background-color: white;
-                border: 1px solid $background;
-                color: $textColor;
-                padding: 15px;
-                border-radius: 0 0 10px 10px;
-                line-height: 2rem;
+    .menu-icon {
+      cursor: pointer;
+      display: flex;
+      font-size: 2rem;
+      align-items: center;
+      position: relative;
+      top: -1px;
+      left: 10px;
 
-                @include mobile{
-                    width: 40vw;
-                }
-                @include tablet{
-                    width: 25vw;
-                }
-                @include desktop{
-                    width: 20vw;
-                }
-            }
-            img{
-                height: 30px;
-                width: 30px;
-                object-fit: cover;
-                border-radius: 50%;
-            }
-        }
+      @include mobile {
+        left: 0;
+      }
+      @include tablet {
+        display: none;
+      }
     }
+    .sidebar-container {
+      display: flex;
+      gap: 10px;
+    }
+  }
+  .center {
+    position: relative;
+
+    .person {
+      margin-right: 10px;
+
+      .person-icon {
+        cursor: pointer;
+        font-size: 30px;
+
+        @include tablet {
+          display: none;
+        }
+      }
+    }
+  }
+  .right {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+
+    .user {
+      position: relative;
+
+      .profile-icon {
+        cursor: pointer;
+      }
+      .face-icon {
+        font-size: 26px;
+      }
+      ul {
+        width: 45vw;
+        position: absolute;
+        right: 5px;
+        top: 35px;
+        background-color: white;
+        border: 1px solid $background;
+        color: $textColor;
+        padding: 15px;
+        border-radius: 0 0 10px 10px;
+        line-height: 2rem;
+
+        @include mobile {
+          width: 40vw;
+        }
+        @include tablet {
+          width: 25vw;
+        }
+        @include desktop {
+          width: 20vw;
+        }
+      }
+      img {
+        height: 30px;
+        width: 30px;
+        object-fit: cover;
+        border-radius: 50%;
+      }
+    }
+  }
 }
