--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,64 +1,63 @@
-@import '../../App.scss';
+@import "../../App.scss";
 
-.sidebar{
-        width: 80vw;
-        position: absolute;
-        top: 50px;
-        left: 30px;
-        background-color: white;
-        border: 1px solid $background;
-        border-radius: 20px 20px 0 0;
-        height: calc(100vh - 50px);
-        overflow: scroll;
+.sidebar {
+  width: 60vw;
+  position: absolute;
+  top: 50px;
+  left: -15px;
+  background-color: white;
+  border: 1px solid $background;
+  border-radius: 20px 20px 0 0;
+  height: calc(100vh - 50px);
+  overflow: scroll;
+  padding: 10px;
+  z-index: 1000;
+
+  @include mobile {
+    width: 50vw;
+  }
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
+  .container {
+    padding: 10px 20px;
+
+    hr {
+      margin: 10px 0;
+      border: none;
+      height: 0.5px;
+      background-color: $background;
+    }
+    .menu {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+
+      .header {
+        font-weight: 600;
         padding: 10px;
-        z-index: 1000;
+      }
 
-        @include mobile{
-            left: 70px;
-            width: 70vw;
+      .item a {
+        display: flex;
+        gap: 5px;
+        align-items: center;
+
+        a {
+          text-decoration: none;
         }
-        &::-webkit-scrollbar{
-            display: none;
+        span {
+          font-size: 14px;
         }
-        
-        .container{
-            padding: 10px 20px;
 
-            hr{
-                margin: 10px 0;
-                border: none;
-                height: 0.5px;
-                background-color: $background;
-            }
-            .menu{
-                display: flex;
-                flex-direction: column;
-                gap: 10px;
-
-                .header{
-                    font-weight: 600;
-                    padding: 10px;
-                }
-
-                .item a{
-                    display: flex;
-                    gap: 5px;
-                    align-items: center;
-                    
-                    a{
-                        text-decoration: none;
-                    }
-                    span{
-                        font-size: 14px;
-                    }
-
-                    img{
-                        height: 30px;
-                        width: 30px;
-                        object-fit: cover;
-                        border-radius: 5px;
-                    }
-                }
-            }
+        img {
+          height: 30px;
+          width: 30px;
+          object-fit: cover;
+          border-radius: 5px;
         }
+      }
+    }
+  }
 }
