--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -10,8 +10,15 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
-      padding: 10px;
+      position: absolute;
+      left: 0;
       border-radius: 20px;
+
+      @include tablet{
+        width: 100%;
+        position: relative;
+        padding: 10px;
+      }
     }
     .profile-image {
       width: 80px;
@@ -19,11 +26,14 @@
       border-radius: 50%;
       position: absolute;
       object-fit: cover;
-      position: absolute;
       left: 0;
       right: 0;
       margin: auto;
-      top: calc(100% - 30px);
+      top: calc(100% - 40px);
+
+      @include tablet{
+        top: calc(100% - 30px);
+      }
     }
   }
   .profile-content {
@@ -150,6 +160,7 @@
   .profile-posts {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 15px;
+    padding-left: 15px;
   }
 }
