--- a/src/components/posts/posts.scss
+++ b/src/components/posts/posts.scss
@@ -4,8 +4,12 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  margin: 10px 0 0 20px;
+  margin: 10px 0;
   position: relative;
+
+  @include tablet{
+    margin: 10px 0 0 15px;
+  }
 
   .search {
     display: flex;
