--- a/src/components/layout/rightbar/rightbar.scss
+++ b/src/components/layout/rightbar/rightbar.scss
@@ -7,6 +7,7 @@
   height: calc(100vh - 50px);
   overflow: scroll;
   display: none;
+  margin-top: 5px;
 
   &::-webkit-scrollbar {
     display: none;
@@ -15,7 +16,7 @@
     display: block;
   }
   .container {
-    padding: 10px 20px;
+    padding: 10px;
 
     .item {
       box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.09);
