--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -4,9 +4,9 @@
   width: 60vw;
   position: absolute;
   top: 50px;
-  left: -15px;
+  left: 0;
   background-color: white;
-  border: 1px solid $background;
+  border: 2px solid $background;
   border-radius: 20px 20px 0 0;
   height: calc(100vh - 50px);
   overflow: scroll;
