--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -14,10 +14,10 @@
       left: 0;
       border-radius: 20px;
 
-      @include tablet{
+      @include tablet {
         width: 100%;
         position: relative;
-        padding: 10px;
+        padding: 10px 0;
       }
     }
     .profile-image {
@@ -31,7 +31,7 @@
       margin: auto;
       top: calc(100% - 40px);
 
-      @include tablet{
+      @include tablet {
         top: calc(100% - 30px);
       }
     }
@@ -161,6 +161,5 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
-    padding-left: 15px;
   }
 }
