--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,10 +1,10 @@
 @import "../../App.scss";
 
 .sidebar {
-  width: 60vw;
+  width: 75vw;
   position: absolute;
   top: 50px;
-  left: 0;
+  left: -15px;
   background-color: white;
   border: 2px solid $background;
   border-radius: 20px 20px 0 0;
@@ -39,8 +39,7 @@
         padding: 10px;
       }
 
-
-      .item a{
+      .item a {
         display: flex;
         gap: 5px;
         align-items: center;
