--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -12,7 +12,7 @@
       object-fit: cover;
       position: absolute;
       left: 0;
-      border-radius: 20px 20px 0 0;
+      border-radius: 20px;
 
       @include tablet {
         width: 100%;
