--- a/src/components/friends/friends.scss
+++ b/src/components/friends/friends.scss
@@ -1,13 +1,13 @@
 @import "../../App.scss";
 
 .friends {
-  width: 75vw;
+  width: 60vw;
   position: absolute;
   top: 50px;
   right: -45px;
   background-color: white;
   border: 2px solid $background;
-  border-radius: 20px 20px 0 0;
+  border-radius: 20px 0 0 0;
   height: calc(100vh - 50px);
   overflow: scroll;
   padding: 10px;
