--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -1,13 +1,13 @@
 @import "../../App.scss";
 
 .sidebar {
-  width: 75vw;
+  width: 60vw;
   position: absolute;
   top: 50px;
   left: -15px;
   background-color: white;
   border: 2px solid $background;
-  border-radius: 20px 20px 0 0;
+  border-radius: 0 20px 0 0;
   height: calc(100vh - 50px);
   overflow: scroll;
   padding: 10px;
