Reverted colors footer

--- a/src/components/layout/footer/footer.scss
+++ b/src/components/layout/footer/footer.scss
@@ -1,19 +1,15 @@
 @import '../../../App.scss';
 
 .footer{
-    background-color: $secondary;
     padding: 15px 0;
     font-size: 14px;
-    color: $darkTextColor;
+    color: $textColor;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
+    margin: 20px 0;
 
-    a{
-        color: $darkTextColor;
-    }
     .top{
         display: flex;
         gap: 15px;
