--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -143,8 +143,8 @@
             padding: 5px;
           }
           .edit-details-button {
-            background-color: $tertiary;
-            color: $textColor;
+            background-color: $primary;
+            color: $darkTextColor;
             padding: 7px 10px;
             width: 100%;
             border-radius: 5px;
