--- a/src/components/posts/post/post.scss
+++ b/src/components/posts/post/post.scss
@@ -48,9 +48,8 @@
           position: absolute;
           right: 0;
           width: 40vw;
-          background-color: white;
-          border: 1px solid $background;
-          color: $textColor;
+          background-color: $primary;
+          color: $darkTextColor;
           padding: 10px;
           border-radius: 0 0 10px 10px;
 
