--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -53,6 +53,13 @@
       display: flex;
       gap: 5px;
 
+      @include tablet{
+        flex-direction: column;
+      }
+      @include desktop{
+        flex-direction: row;
+      }
+
       .social-icon {
         cursor: pointer;
       }
