Adjusted border radius post + cover image

--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -16,7 +16,8 @@
       @include tablet {
         width: 100%;
         position: relative;
-        padding: 10px 0;
+        margin: 10px 0;
+        border-radius: 10px;
       }
     }
     .profile-image {
